# portfolio-wave-rider

./: .gitignore  CLAUDE.md  FINDINGS.md  GLOSSARY.md  README.md  REFERENCE.md  holdings.example.csv  holdings_5y.csv  investor_profile.example.md  news_sources.md  pyproject.toml
.claude/: settings.json
.claude/agents/: market-data-fetcher.md  news-researcher.md  optimizer.md  report-writer.md  risk-analyst.md  watchlist-curator.md
.github/workflows/: pages.yml
data/: dashboard.html  wave_history_5y.csv
data/backtest_5y/: dashboard.html  no_tilts_totals.csv  recommendations.csv  report.md  snapshots.csv
data/backtest_curator_5y/: baselines_totals.csv  curation_summary.json  recommendations.csv  report.md  snapshots.csv
docs/: backtest.html  backtest_5y.html  backtest_curator.html  index.html  lambda_comparison.html  lookback_comparison.html  max_weight_comparison.html  news.html  sweep_concentration_cap.html  sweep_lookback.html  sweep_max_watchlist_size.html  sweep_max_weight.html  sweep_risk_aversion.html  wave-stage-classification.md
examples/: sample_prompts.md
scripts/: aggregate_wave_history_5y.py  asof_news_prompt.md  asof_news_prompt_per_ticker.md  autopush_docs.sh  compare_lambdas.py  compare_lookbacks.py  compare_max_weight.py  compute_backtest_dates.py  cron_snapshot.sh  extract_search_terms.py  install_cron.sh  post_date_events.py  rebuild_wave_history.py  replay_watchlist.py  run_sweeps.sh  setup_curator_run.py  sweep.py  sweep_watchlist_size.py  walk_forward.py
src/: __init__.py  cli.py  portfolio.py
tests/: test_portfolio.py
(+319 files in other folders)
