[project]
name = "portfolio-wave-rider"
version = "0.2.0"
description = "Claude Code demo: subagents + skills optimizing a portfolio against a user-authored investor profile."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Joseph M. Hahn" },
]
license = { text = "MIT" }

dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
